# diagnostics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
examples/: CMakeLists.txt  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp  example_6.cpp  main.cpp  test.cpp
include/: diagnostics.hpp
include/diagnostics/: basic.hpp  consumer.hpp  converter.hpp  emitter.hpp  forward.hpp  line_converter.hpp  printer.hpp  renderer.hpp  span.hpp
include/diagnostics/builder/: context.hpp  diagnostic.hpp  sub_diagnostic.hpp
include/diagnostics/builders/: annotated_string.hpp  annotation.hpp  diagnostic.hpp  token.hpp
include/diagnostics/consumers/: base.hpp  error_tracking.hpp  sorting.hpp  stream.hpp
include/diagnostics/core/: config.hpp  cow_string.hpp  format.hpp  format_any.hpp  format_string.hpp  formatter.hpp  function_ref.hpp  small_vec.hpp  small_vector.hpp  static_string.hpp  stream.hpp  string_utils.hpp  terminal_config.hpp  utf8.hpp  utils.hpp
include/diagnostics/core/term/: annotated_string.hpp  basic.hpp  canvas.hpp  color.hpp  config.hpp  style.hpp  terminal.hpp  writer.hpp
include/diagnostics/old/: basic.hpp  consumer.hpp  emitter.hpp  line_converter.hpp
include/diagnostics/old/builder/: context.hpp  diagnostic.hpp  sub_diagnostic.hpp
src/: CMakeLists.txt  test.cpp
test/: CMakeLists.txt
test/runtime/: CMakeLists.txt  consumer_test.cpp  cow_string_test.cpp  diagnostic_test.cpp  formatter_test.cpp  mock.hpp  small_vector_test.cpp  span_test.cpp
